--- a/docs/10_Dynamické_programování/10.4_Editační_vzdálenost_řetězců_(EVŘ).md
+++ b/docs/10_Dynamické_programování/10.4_Editační_vzdálenost_řetězců_(EVŘ).md
@@ -130,7 +130,7 @@ $$
   řetězce vybereme jako minimum z již známých řešení pro výše
   popsané tři kombinace jejich suffixů, je ponechána na cvičení
 
-!!! Implication "Laskavý Lukáš doplní"
+!!! Implication "Iterativní předpis řešení EVŘ"
 
     - Mějme slova $A$ a $B$ a tabulku $M[n, m]$, kde $n = |A|$ a $m = |B|$
     - Poté pro krok iterace platí 
