Update fixed "Definice 4.3 (Binární minimová halda)"

--- a/docs/04_Binární_haldy/4.1_Halda_jako_struktura.md
+++ b/docs/04_Binární_haldy/4.1_Halda_jako_struktura.md
@@ -30,7 +30,7 @@
     **Binární minimová halda** je datová struktura tvaru binárního stromu, v jehož každém vrcholu $x$ je uložen jeden **klíč** $k(x)$ a která splňuje tyto dvě vlastnosti:
 
     1. **Tvar Haldy:** Strom má všechny hladiny kromě poslední plně obsazené. Poslední hladina je zaplněna od levého okraje směrem k pravému.
-    2. **Haldové uspořádání:** Je-li $v$ vrchol $s$ a jeho syn, platí
+    2. **Haldové uspořádání:** Je-li $v$ vrchol a $s$ jeho syn, platí
     
     <center>$k(v) \le k(s)$</center>
 
