Update added "Věta 4.3 (O koreknosti HeapInsert)", reindexed other Theorems and fixed text

--- a/docs/04_Binární_haldy/4.3_Operace_na_Haldě.md
+++ b/docs/04_Binární_haldy/4.3_Operace_na_Haldě.md
@@ -12,8 +12,7 @@
 * ukazatel na otce
 * ukazatele na své syny (jsou-li v haldě obsažené)
 
-V dalším předpokládáme, že výše uvedené máme a umíme přepočítat
-v čase $O(1)$. Na závěr takovou implementaci předvedeme.
+V následujícím textu předpokládáme, že výše uvedené proměnné máme a umíme přepočítat v čase $O(1)$. Na závěr takovou implementaci předvedeme.
 
 ---
 
@@ -68,6 +67,27 @@ v čase $O(1)$. Na závěr takovou implementaci předvedeme.
 
 ---
 
+<a id="def-4.3"></a>
+!!! Theorem "Věta 4.3 (O koreknosti HeapInsert)"
+
+    ### O koreknosti HeapInsert {#def-4.3}
+    Buď $H$ minimová halda a $k$ klíč. Potom struktura vzniklá voláním<br> **HeapInsert($H$, $k$)** je opět minimová halda.
+
+??? Proof "Důkaz Věty 4.3"
+
+    - Pokud H je prázdná, pak je výsledkem jednoprvková halda – hotovo.
+    - Jinak označme $H'$ výsledek volání **HeapInsert($H$, $k$)**.
+    - $H'$ má dle (3) tvar haldy.
+    - Zbývá ověřit, že splňuje podmínku haldového uspořádání
+    - Po přidání hodnoty $k$ do nového listu $l$ může existovat jen jedna hrana $s$ porušenou podmínkou. Tento problém pomocí funkce **BubbleUp** posouváme směrem ke kořeni.
+    - Je třeba ověřit, že nemůžeme porušit podmínku haldového uspořádání mezi nějakým otcem $o$ a jeho (případným) druhým synem na cestě z $l$ do kořene.
+    - Opět prohazujeme s menším ze synů, čímž posunujeme porušení na dvojici následujících hladin.
+    - Toto může pokračovat jen do poslední hladiny.
+        - Pozorujeme, že hodnota $k(o)$ v $o$ se aplikováním **BubbleUp** nemohla zvýšit (může klesnout, případně zůstat stejná, pokud otec vrcholu $o$ měl stejnou hodnotu).
+
+
+---
+
 <a id="algo-4.2"></a>
 !!! Algorithm "Algoritmus 4.2 (HeapExtractMin)"
 
@@ -118,13 +138,13 @@ v čase $O(1)$. Na závěr takovou implementaci předvedeme.
 
 ---
 
-<a id="def-4.3"></a>
-!!! Theorem "Věta 4.3 (O koreknosti HeapExtractMin)"
+<a id="def-4.4"></a>
+!!! Theorem "Věta 4.4 (O koreknosti HeapExtractMin)"
 
-    ### O koreknosti HeapExtractMin {#def-4.3}
+    ### O koreknosti HeapExtractMin {#def-4.4}
     Buď $H$ minimová halda a $k$ klíč. Potom struktura vzniklá voláním<br> **HeapExtractMin($H$)** je opět minimová halda.
 
-??? Proof "Důkaz Věty 4.3"
+??? Proof "Důkaz Věty 4.4"
 
     - Tvar haldy je opět zachován triviálně.
     - Pokud je výsledkem prázdná či jednoprvková halda, máme hotovo
