--- a/docs/04_Binární_haldy/4.5_Heap_Build_a_Sort.md
+++ b/docs/04_Binární_haldy/4.5_Heap_Build_a_Sort.md
@@ -38,17 +38,17 @@ $$O(log(2)) +O(log(3)) + ··· + O(log\ n) = O(log(n!)) \approx O(n\ log\ n)$$
 
         ```
 
-<a id="def-4.3"></a>
-!!! Theorem "Věta 4.3 (O časové složitosti algoritmu HeapBuild)"
+<a id="def-4.5"></a>
+!!! Theorem "Věta 4.5 (O časové složitosti algoritmu HeapBuild)"
 
-    ### O časové složitosti HeapBuild {#def-4.3}
+    ### O časové složitosti HeapBuild {#def-4.5}
     Operace **HeapBuild** má časovou složitost $O(n)$.
 
-??? Proof "Důkaz Věty 4.3"
+??? Proof "Důkaz Věty 4.5"
 
     - Nechť strom haldy má $h$ hladin (od 0 do h-1)
     - Platí tedy $2^{h-1} \le n \le 2^h - 1$.
-    - Pro účely analýzy si představíme, že i poslední hladina je zcela plná, například nějakými „dummy“ prvky většími než vše ostatní; tím jistě nesnížíme potřebný počet operací.
+    - Pro účely analýzy si představíme, že i poslední hladina je zcela plná, například nějakými „dummy“ prvky většími než vše ostatní, tím jistě nesnížíme potřebný počet operací.
     - Procedura **BubbleDown** od $j$-té hladiny trvá čas $O(h − 1 − j)$.
     - Pokud to sečteme přes všech $2^j$ vrcholů hladiny $j$ a poté přes všechny hladiny, dostaneme (až na konstantu)
 
