fix: typo in proof of theorem 4.1

--- a/docs/04_Binární_haldy/4.2_Vlastnosti_haldy.md
+++ b/docs/04_Binární_haldy/4.2_Vlastnosti_haldy.md
@@ -7,7 +7,7 @@
 
 ??? Proof "Důkaz Věty 4.1"
     - Binární strom s $h \ge 1$ úplnými hladinami má<br> $n = 2^0 + 2^1 + 2^2 ... + 2^{h-1} = 2^h - 1$ vrcholů
-    - Vzhledem ke Tvaru haldy přibude nová hladina jen tehdy, když<br> počet prvků $n$ vzrsote z $2^h - 1$ na $2^h$
+    - Vzhledem ke Tvaru haldy přibude nová hladina jen tehdy, když<br> počet prvků $n$ vzroste z $2^h - 1$ na $2^h$
     - Z toho plyne vzorec, neboť právě funkce $\lfloor log(n) \rfloor$ se právě při této<br> změně $n$ zvětší o jedna a pro $n=2^h - 1$ je počet hladin<br>
     $h = (h - 1) + 1 = \lfloor log(2^h - 1) \rfloor + 1$.
 
