fix: 7.5 fixed definition in "Definice 7.3 (Jev)"

--- a/docs/07_Randomizace_a_hešování/7.5_Pravděpodobnostní_prostor.md
+++ b/docs/07_Randomizace_a_hešování/7.5_Pravděpodobnostní_prostor.md
@@ -17,7 +17,7 @@
     ### Jev {#def-7.3}
 
     - **Jev** je nějaká množina $A \subseteq \Omega$ elementárních jevů.
-    - **Pravděpodobnost jevu** $A$ je: $\sum_{\omega \in \Omega}{\mathcal{\mathbf{P}}(\omega)}$
+    - **Pravděpodobnost jevu** $A$ je: $\sum_{\omega \in A}{\mathcal{\mathbf{P}}(\omega)}$
 
 ---
 
