fix: 7.5 fixed missiong ) in "Pozorování"

--- a/docs/07_Randomizace_a_hešování/7.5_Pravděpodobnostní_prostor.md
+++ b/docs/07_Randomizace_a_hešování/7.5_Pravděpodobnostní_prostor.md
@@ -54,7 +54,7 @@
     $\text{2.}$ Pro každý jev $A$ platí:
 
     $$
-    \mathbf{P}(\overline{A} = 1 - \mathbf{P}(A)
+    \mathbf{P}(\overline{A}) = 1 - \mathbf{P}(A)
     $$
 
 ---
