fix: 7.5 fixed definition "Definice 7.7 (Střední hodnota náhodné veličiny)"

--- a/docs/07_Randomizace_a_hešování/7.5_Pravděpodobnostní_prostor.md
+++ b/docs/07_Randomizace_a_hešování/7.5_Pravděpodobnostní_prostor.md
@@ -83,7 +83,7 @@
     tedy:
     
     $$
-    \sum_{\omega \in \Omega}{X(\omega) \cdot \mathbf{P}(\omega)} = \sum_{x_{i}} \cdot \mathbf{P}[X = x_{i}]
+    \sum_{\omega \in \Omega}{X(\omega) \cdot \mathbf{P}(\omega)} = \sum_{x_{i}} x_{i} \cdot \mathbf{P}[X = x_{i}]
     $$
     
     Tato řada musí konvergovat absolutně, jinak střední hodnotu
