fix: fixed missing part in "Důkaz (viz. BI-MA1)"

--- a/docs/09_Quicksort/9.2_Složitost_quicksortu.md
+++ b/docs/09_Quicksort/9.2_Složitost_quicksortu.md
@@ -86,6 +86,7 @@ Složitost při špatné volbě pivotu
     \frac{1}{n} + ln(n) \leq \sum_{k=1}^{n}{\frac{1}{k}} \leq 1 + ln(n)
     $$
 
+    a víme, že $ln(n) = \Theta(log n)$.
 
 ---
 
