fix: 10.5 fixed typo in "Histogramové BVS - myšlenka"

--- a/docs/10_Dynamické_programování/10.5_Optimalizace_BVS.md
+++ b/docs/10_Dynamické_programování/10.5_Optimalizace_BVS.md
@@ -27,7 +27,7 @@ $$
 = \sum_{i \in [n]} p_i + \sum_{i \in L} h_L(i)p_i + \sum_{i \in R} h_R(i)p_i
 $$
 
-- kde $h_L(i)$ a $h_R(i)$ označují příslušné hladiny ve stromech pro data v $L a $R.
+- kde $h_L(i)$ a $h_R(i)$ označují příslušné hladiny ve stromech pro data v $L$ a $R$.
 
 <a id="algo-10.10"></a>
 !!! Algorithm "Algoritmus 10.10 (BVSOPT_rec)"
