fix: 9.4 fixed typos in "Dolní meze složitosti dalších operací"

--- a/docs/09_Quicksort/9.4_Dolní_meze_řazení.md
+++ b/docs/09_Quicksort/9.4_Dolní_meze_řazení.md
@@ -82,14 +82,14 @@ Příklad rozhodovacího stromu TS pro nějaký algoritmus S a n = 3
 
 !!! Implication "Důsledek"
 
-    Každá korektní implementace operace **ExtractMin** v binární haldě(taková, že po provedení **ExtractMin** bude struktura splňovat podmínky haldy)
+    Každá korektní implementace operace **ExtractMin** v binární haldě (taková, že po provedení **ExtractMin** bude struktura splňovat podmínky haldy)
     s $n$ prvky musí mít časovou složitost $\Omega(log n)$ v nejhorším případě.
 
 ??? Proof "Důkaz"
 
     **Sporem:**
     
-    1. Předpokládejme, že existuje algoritmus **ExtractMin** který má v nejhorším případě časovou složitost $O(f (n))$, kde $f (n) = o(log n)$
+    1. Předpokládejme, že existuje algoritmus **ExtractMin**, který má v nejhorším případě časovou složitost $O(f (n))$, kde $f (n) = o(log n)$
     2. Mějme prvky $a_{1}, . . . , a_{n}$ a uložme je do pole P
     3. Na toto pole zavolejme funkci **HeapBuild**, která z něj v čase $O(n)$ vytvoří korektní binární haldu.
     4. Potom zavolejme $n$-krát funkci **ExtractMin**, čímž vypíšeme seřazenou posloupnost.
