fix: 10.5 fixed typos in "Důkaz korektnosti BVSOPT_rec"

--- a/docs/10_Dynamické_programování/10.5_Optimalizace_BVS.md
+++ b/docs/10_Dynamické_programování/10.5_Optimalizace_BVS.md
@@ -62,7 +62,7 @@ $$
     - Formálně dokazujeme indukcí podle velikosti (tj. počtu vrcholů)
     stromu $T$.
 
-    **ZI:** Pro jdenovrcholové stromy jistě vrací optmální řešení.
+    **ZI:** Pro jednovrcholové stromy jistě vrací optimální řešení.
 
     **IK:** 
 
