fix: 10.6 fixed inconsistencies in "Algoritmus 10.12 (MtmRec)"

--- a/docs/10_Dynamické_programování/10.6_Triangulace_konvexního_mnohoúhelníku.md
+++ b/docs/10_Dynamické_programování/10.6_Triangulace_konvexního_mnohoúhelníku.md
@@ -57,12 +57,12 @@
         M := ∞
         Pro k := 2,...,n − 1:
         // hrana a_1,a_n bude v trojúhelníku a_1,a_n,a_k,
-        // ten rozdělí a1,...,a_n na a_1,...,a_k a a_k,...,a_n.
+        // ten rozdělí a_1,...,a_n na a_1,...,a_k a a_k,...,a_n.
             Pokud k = 2: M_1 := 0
             Pokud k ≥ 3: M_1 := MtmRec(a_1,...,a_k) + ||a_1,a_k||
-            Pokud k ≤ n − 2: M2 := MtmRec(a_k,...,a_n) + ||a_k,a_n||
-            Pokud k = n − 1: M2 := 0
-        M := min(M, M1 + M2)
+            Pokud k ≤ n − 2: M_2 := MtmRec(a_k,...,a_n) + ||a_k,a_n||
+            Pokud k = n − 1: M_2 := 0
+        M := min(M, M_1 + M_2)
         Vrať M
     ```
 
