fix: 11.4, 11.5, 11.6 added index to theorem titles and fixed typos

--- a/docs/11_Minimální_kostry_grafu/11.5_Implementace_Kruskalova_algoritmu.md
+++ b/docs/11_Minimální_kostry_grafu/11.5_Implementace_Kruskalova_algoritmu.md
@@ -64,7 +64,7 @@
 - Zbytek algoritmu testuje hrany pomocí operace Find a spojuje menší stromy do větších stromů pomocí operace Union.
 
 <a id="theorem-11.7"></a>
-!!! Theorem "Věta (o časové složitosti Kruskalova algoritmu)"
+!!! Theorem "Věta 11.7 (o časové složitosti Kruskalova algoritmu)"
 
     Kruskalův algoritmus vytvoří minimální kostru v čase $O(m \log n + T_i(n) + m \cdot T_f(n) + n \cdot T_u(n))$, kde $T_i(n), T_f(n)$ a
     $T_u(n)$ jsou časové složitosti operací **Init**, **Find** a **Union** v **Union-Find** struktuře nad množinou velikosti $n$.
