--- a/docs/11_Minimální_kostry_grafu/11.6_Union_Find_pokračování.md
+++ b/docs/11_Minimální_kostry_grafu/11.6_Union_Find_pokračování.md
@@ -69,11 +69,11 @@
 ### Hloubka keříků
 
 <a id="theorem-11.8"></a>
-!!! Theorem "Lemma (o hloubce keříků)"
+!!! Theorem "Lemma 11.8 (o hloubce keříků)"
 
     Výše popsaný algoritmus **Union** zachovává invariant, že keřík s $h$ hladinami obsahuje nejméně $2^{h−1}$ vrcholů.
 
-??? Proof "Důkaz věty 11.8"
+??? Proof "Důkaz lemmatu 11.8"
 
     - Indukcí podle počtu operací **Union**.
     - Na počátku algoritmu mají všechny keříky jednu hladinu a $1$ vrchol a $( 1 \ge 2^{1−1} = 1)$.
@@ -94,7 +94,7 @@
 
 ### Složitost Kruskalova algoritmu s keříky
 
-- Z předchozího plyne, že v keříkové reprezentaci je časovásložitost operace
+- Z předchozího plyne, že v keříkové reprezentaci je časová složitost operace
     - **Init** $T_i(n) = O(n)$,
     - **Find** $T_f(n) = O(\log n)$ a
     - **Union** $T_u(n) = O(\log n)$ (my dokonce voláme jen na kořeny, takže lze počítat $O(1)$).
