--- a/docs/11_Minimální_kostry_grafu/11.4_Kruskalův_algoritmus.md
+++ b/docs/11_Minimální_kostry_grafu/11.4_Kruskalův_algoritmus.md
@@ -32,10 +32,10 @@
 ![Příklad Kruskalova algoritmu](../assets/11/kruskal_algoritmus.png){align = center}
 
 <a id="theorem-11.6"></a>
-!!! Theorem "Lemma (o korektnosti Kruskalova algoritmu)"
+!!! Theorem "Lemma 11.6 (o korektnosti Kruskalova algoritmu)"
 
     Kruskalův algoritmus se zastaví a vydá minimální kostru.
-??? Proof "Důkaz věty 11.6"
+??? Proof "Důkaz lemmatu 11.6"
 
     - Konečnost: cyklus se vykoná $m$-krát.
     - Správnost: Ukážeme nejdříve, že pokud algoritmus přidá hranu $e = \{u,v\}$ do $T$, pak $e$ leží v minimální kostře.
