fix: 6.3 - proof of theorem 6.1 n = 2^{k-1} instead of 2 k - 1

--- a/docs/06_BVS_a_vyvažování/6.3_Vyváženost_BVS.md
+++ b/docs/06_BVS_a_vyvažování/6.3_Vyváženost_BVS.md
@@ -49,7 +49,7 @@
 
 ??? Proof "Důkaz Věty 6.1"
 
-    Uvažujme dokonale vyvážený **BVS** s klíči $1, 2, . . . , n$, kde $n = 2k − 1$ <br>
+    Uvažujme dokonale vyvážený **BVS** s klíči $1, 2, . . . , n$, kde $n = 2^{k − 1}$ <br>
     Ten pak vypadá nutně takto:
 
     ---
@@ -60,7 +60,7 @@
 
     1. Kořen stromu je vždy prostřední z klíčů.
     2. Všechna lichá čísla jsou v listech stromu.
-    3. Levý a pravý podstrom mají právě $2k−1 − 1$ vrcholů a jsou tedy opět určeny jednoznačně.
+    3. Levý a pravý podstrom mají právě $2^{k−1} − 1$ vrcholů a jsou tedy opět určeny jednoznačně.
     4. Nyní provedeme následující posloupnost dvojic operací: <br>
     $Insert(n + 1), Delete(1), Insert(n + 2), Delete(2), . . .$
     5. Po provedení i-té dvojice operací bude strom obsahovat hodnoty $i + 1, . . . , i + n$
