feat: 1.1 added text about default marking

--- a/docs/01_Základy_grafů/1.1_Základní_pojmy.md
+++ b/docs/01_Základy_grafů/1.1_Základní_pojmy.md
@@ -23,6 +23,11 @@
     - $u$ je **sousedem** $v$ v $G$ (a naopak), 
     - $u$ i $v$ jsou **incidentní** s hranou $e$. 
 
+- Množinu **všech** dvouprvkových podmnožin množiny $V$ (tedy všech možných hran) budeme označovat $\binom{V}{2}$.
+- Obvykle budeme říkat jen **graf**, tj. neříkáme neorientovaný.
+- Nechť $G$ je graf, pak:
+    - jeho množinu vrcholů a hran budeme značit $V(G)$ a $E(G)$, 
+    - počet jeho vrcholů a hran budeme obvykle značit $n = |V (G)|$ a $m = |E(G)|$.
 
 <a id="def-1.3"></a>
 !!! definition "Definice 1.3 (Sled a Cesta)"
