fix: 1.1 added missing part to "Definice 1.3 (Sled a Cesta)"

--- a/docs/01_Základy_grafů/1.1_Základní_pojmy.md
+++ b/docs/01_Základy_grafů/1.1_Základní_pojmy.md
@@ -38,3 +38,4 @@
     - **Cesta** v grafu $G$ je **sled**, ve kterém se **neopakují vrcholy** (a tedy **ani hrany**).
     - Má-li cesta **P** v grafu $G$ koncové vrcholy $s = v_{0}$ a $t = v_{k}$, mluvíme o cestě z $s$ do $t$, nebo o **s-t-cestě**. (Připouštíme $s = t$, **cesta tedy může mít nulovou délku**).
     - **Délka** s-t-cesty je **počet hran v této cestě** (v grafu $G$).
+    - **Vzdálenost** $s$ a $t$ $d(s, t)$ je délka nejkratší $s$-$t$-cesty
