fix: 2.1 fix highlight in "Definice 2.1 (Souvislost grafu)" and changed () from [] when calling function in  "Algoritmus 2.2 (DFS_graf)"

--- a/docs/02_Souvislost_grafů/2.1_Souvislost_grafů.md
+++ b/docs/02_Souvislost_grafů/2.1_Souvislost_grafů.md
@@ -6,7 +6,7 @@
     ### Souvislost grafu {#def-2.1}
 
     Graf $G$ je **souvislý**, jestliže v něm pro každé jeho dva vrcholy $u$, $v$ existuje u-v-cesta. <br>
-    Jinak je $G$ nesouvislý.
+    Jinak je $G$ **nesouvislý**.
 
 <a id="def-2.2"></a>
 !!! Definition "Definice 2.2 (Souvislá komponenta)"
@@ -141,7 +141,7 @@ symetrizace, což je neorientovaný graf.
     ```math title="Algoritmus DFS_graf (graf G, vrchol s):"
     Pro každý vrchol u ∈ V (G):
         stav[u] := nenalezený
-    DFS[s]
+    DFS(s)
     ```
 
     ```math title="DFS (vrchol v):" linenums="4"
@@ -149,6 +149,6 @@ symetrizace, což je neorientovaný graf.
         return
     stav[v] := otevřený
     Pro každého souseda u vrcholu v:
-        DFS[u]
+        DFS(u)
     stav[v] := uzavřený
     ```
