fix: 4.3 fixed typos in opening text and "Algoritmus 4.2 (HeapExtractMin)"

--- a/docs/04_Binární_haldy/4.3_Operace_na_Haldě.md
+++ b/docs/04_Binární_haldy/4.3_Operace_na_Haldě.md
@@ -12,7 +12,7 @@
 * ukazatel na otce
 * ukazatele na své syny (jsou-li v haldě obsažené)
 
-V následujícím textu předpokládáme, že výše uvedené proměnné máme a umíme přepočítat v čase $O(1)$. Na závěr takovou implementaci předvedeme.
+V následujícím textu předpokládáme, že výše uvedené proměnné máme a umíme je přepočítat v čase $O(1)$. Na závěr takovou implementaci předvedeme.
 
 ---
 
@@ -110,7 +110,7 @@ V následujícím textu předpokládáme, že výše uvedené proměnné máme a
     !!! Algorithm "Idea"
 
         - Prohoď $k(r)$ a $k(l)$
-        - Odstraň vrchnol $l$ a zmenši haldu o 1 prvek.
+        - Odstraň vrchol $l$ a zmenši haldu o 1 prvek.
         - "Probublávej dolů" z kořene klíč $k(l)$ na jeho správné místo, aby opět platilo haldové uspořádání.
 
     !!! Algorithm "Algoritmus"
