fix: 7.2 fix mising part in example of "rozdělení univerza"

--- a/docs/07_Randomizace_a_hešování/7.2_Hešovací_funkce.md
+++ b/docs/07_Randomizace_a_hešování/7.2_Hešovací_funkce.md
@@ -53,7 +53,7 @@ hešování lze provést i exaktní analýzu.
   2.  Hešovací funkce $h$ **rozděluje univerzum** $\mathcal{U}$ **do přihrádek rovnoměrně**, například takto:
   
 
-$$\forall i \neq j \in \{0,...,m-1\} : |h^{-1}(j)| \pm 1$$
+$$\forall i \neq j \in \{0,...,m-1\} : |h^{-1}(i)| = |h^{-1}(j)| \pm 1$$
 
 #### Časová složitost ideálního hešování
 
