fix: (added detail that Knop was paying attention when explaining CountingSort)

--- a/docs/09_Quicksort/9.5_Speciální_řadící_algoritmy.md
+++ b/docs/09_Quicksort/9.5_Speciální_řadící_algoritmy.md
@@ -33,19 +33,24 @@
 
     ### Algoritmus CountingSort {algo-9.2}
 
-    ```math title="CountingSort(x1, . . . , xn ∈ {1, . . . , r})"
-    Pro j := 1, . . . , r:
-        pocet[j] := 0
-    Pro i := 1, . . . , n:
-        pocet[xi] := pocet[xi] + 1 //histogram výskytů
-    zacatek[1] := 1
-    Pro j := 2, . . . , r: //prefixový součet
-        zacatek[j] := zacatek[j − 1] + pocet[j − 1]
-    Pro i := 1, . . . , n:
-        vystup[zacatek[xi]] := xi //přesun na spočítané pozice
-        zacatek[xi] := zacatek[xi] + 1
-    Vrať výsledek vystup[1], . . . , vystup[n]
-    ```
+        ```math title="CountingSort(x1, . . . , xn ∈ {1, . . . , r})"
+        Pro j := 1, . . . , r:
+            pocet[j] := 0
+        Pro i := 1, . . . , n:
+            pocet[xi] := pocet[xi] + 1 //histogram výskytů
+        zacatek[1] := 1
+        Pro j := 2, . . . , r: //prefixový součet
+            zacatek[j] := zacatek[j − 1] + pocet[j − 1]
+        Pro i := 1, . . . , n:
+            vystup[zacatek[xi]] := xi //přesun na spočítané pozice
+            zacatek[xi] := zacatek[xi] + 1
+        Vrať výsledek vystup[1], . . . , vystup[n]
+        ```
+
+    !!! Algorithm "Důležité pozorování o modelu RAM"
+
+        Paměť RAMu tvoří pole celočíselných buněk, které jsou adresovatelné celými čísly, nikoliv prvky posloupnosti!
+    
 
 ---
 
