fix: 3.5 fixed typo in "Kvadratické algoritmy řazení"

--- a/docs/03_Stromy/3.5_Jednoduché_řazení.md
+++ b/docs/03_Stromy/3.5_Jednoduché_řazení.md
@@ -47,7 +47,7 @@
 
 ## Kvadratické algoritmy řazení
 
-- Vstupní posloupnost se rozdělí na **levou seřazenou** a **pravou neseřazeno** část.
+- Vstupní posloupnost se rozdělí na **levou seřazenou** a **pravou neseřazenou** část.
 - Na počátku je levá část prázdná a pravá část je celá vstupní posloupnost.
 - Po vložení prvku se hranice mezi seřazenou a neseřazenou částí posune o jednu pozici doprava.
 
