fix: typo in proof of theorem 6.1

--- a/docs/06_BVS_a_vyvažování/6.3_Vyváženost_BVS.md
+++ b/docs/06_BVS_a_vyvažování/6.3_Vyváženost_BVS.md
@@ -49,7 +49,7 @@
 
 ??? Proof "Důkaz Věty 6.1"
 
-    Uvažujme dokonale vyvážený **BVS** s klíči $1, 2, . . . , n$, kde $n = 2^{k − 1}$ <br>
+    Uvažujme dokonale vyvážený **BVS** s klíči $1, 2, . . . , n$, kde $n = 2^{k} - 1$ <br>
     Ten pak vypadá nutně takto:
 
     ---
