fix: typos - 9.1 - SRV Quicksortu

--- a/docs/09_Quicksort/9.1_Quicksort.md
+++ b/docs/09_Quicksort/9.1_Quicksort.md
@@ -31,14 +31,14 @@ větší než pivot).
 
 --- 
 
-### Strom rekurzivních volání (SRV) QuickSortU
+### Strom rekurzivních volání (SRV) QuickSortu
 
 1. V kořeni SRV máme celou posloupnost $n$ prvků, na první hladině
 její levou a pravou část, na druhé hladině levé a pravé části
 těchto částí, a tak dále, až v listech triviální posloupnosti délky $1$
 2. Součet velikostí všech podproblémů v libovolné hladině SRV je
 tedy nejvýše $n$
-3. Rozkládání vstupu $i$ spojování částí jsou operace v lineárním
+3. Rozkládání vstupu i spojování částí jsou operace v lineárním
 čase.
 4. V každém vrcholu SRV stráví algoritmus čas úměrný velikosti
 příslušného podproblému.
