fix: 3.1 Changed random sentence to "důsledek" after proof of theorem 3.1

--- a/docs/03_Stromy/3.1_Základní_pojmy.md
+++ b/docs/03_Stromy/3.1_Základní_pojmy.md
@@ -38,7 +38,10 @@
     6. Kdyby $w \notin V(P)$, cesta $P$ by šla prodloužit a nebyla by tedy nejdelší.
     7. To samé platí pro koncový vrchol $v$ - **SPOR**.
 
-Protože cesty jsou stromy, existují stromy, mající právě dva listy.
+
+!!! Implication "Důsledek"
+
+    Protože cesty jsou stromy, existují stromy, mající právě dva listy.
 
 
 ---
