fix: 11.1 Definition 11.1 R font 2

--- a/docs/11_Minimální_kostry_grafu/11.1_Problém_minimální_kostry_grafu.md
+++ b/docs/11_Minimální_kostry_grafu/11.1_Problém_minimální_kostry_grafu.md
@@ -18,7 +18,7 @@
     ### Minimální kostra grafu {#def-11.1}
     
     - Mějme souvislý neorientovaný graf $G = (V, E)$.  Každé hraně $e \in E$ přiřadíme číselnou **váhu** $w(e)$,
-    kde $w: E \to \mathbf{R}$. Takový graf se nazývá **hranově ohodnocený**.
+    kde $w: E \to \mathbb{R}$. Takový graf se nazývá **hranově ohodnocený**.
     - Váhovou funkci můžeme přirozeně rozšířit na podgrafy: **Váha** $w(H)$ podgrafu $H \subseteq G$ je součet vah jeho hran.
     - Kostra hranově ohodnoceného grafu G je **minimální**, pokud má mezi všemi jeho kostrami nejmenší váhu.
 
