fix: added defintiion from dml https://courses.fit.cvut.cz/BI-DML/@master/textbook/sec_0806_dirichlet_stirling.html#thm_kombi_dirichlet

--- a/docs/01_Základy_grafů/1.2_BFS.md
+++ b/docs/01_Základy_grafů/1.2_BFS.md
@@ -102,6 +102,7 @@ Před dokončením důkazu správnosti definujme BFS fáze a hladiny.
     - **Hladina** $H_{i}$ je množina všech vrcholů otevřených a vložených do  $Q$ ve fázi $F_{i−1}$.
     - **Fáze** $F_{i}$ trvá od konce fáze $F_{i−1}$ až po uzavření všech vrcholů z $H_{i}$ (zahrnuje tedy vybrání všech vrcholů z $H_{i}$ z $Q$, otevření jejich dosud nenalezených sousedů a vložení těchto sousedů do $Q$).
     - Nechť $h$ je číslo poslední fáze BFS$(G, s)$ (po ní se BFS$(G, s)$ zastaví).
+    
 
 ??? Proof "Důkaz Vlastnosti 1"
 
@@ -111,6 +112,10 @@ Před dokončením důkazu správnosti definujme BFS fáze a hladiny.
     2. BFS otvírá na řádku $(11)$ všechny nové sousedy dříve otevřených vrcholů.
     3. (⊇) Vrchol tedy bude otevřen (a později pak uzavřen) pouze tehdy, když do něho ze startu $s$ vede posloupnost sousedních hran.
     4. (⊆) Naopak, existuje-li do vrcholu nějaká posloupnost sousedních hran z $s$, bude v průběhu algoritmu někdy otevřen.
+
+!!! Implication "Neformální definice holubníkového principu (věta z BI-DML)"
+
+    Jestliže n holubů vletí do k hnízd, přičemž k < n, pak v některém hnízdě musí být alespoň dva holubi.
 
 ??? Proof "Důkaz Vlastnosti 2"
 
