fix: issue #18 - 5.3 updated proof 5.7

--- a/docs/05_Binomiální_haldy/5.3_Operace_na_BH.md
+++ b/docs/05_Binomiální_haldy/5.3_Operace_na_BH.md
@@ -239,7 +239,7 @@ Algoritmus na vytvoření **BH** $C$ nyní zrcadlí předchozí algoritmus sčí
 
 ??? Proof "Důkaz Věty 5.7"
 
-    1. Krok $(1)$ trvá čas $O(1)$, stačí si udržovat minimový ukazatel na strom a vypojit ho ze seznamu.
-    2. Kroky $(2)$ a $(4)$ trvají $O(log n)$, protože kořen binomiálního stromu má nejvýše $O(log n)$ synů.
-    3. Sloučení hald trvá $O(log n)$, včetně rekonstrukce minimového ukazatele
+    1. Kroky $(1)$ a $(2)$ trvají čas $O(1)$, stačí si udržovat minimový ukazatel na strom a vypojit ho ze seznamu.
+    2. Kroky $(3)$ a $(4)$ trvají $O(logn)$, protože kořen binomiálního stromu má nejvýše $O(logn)$ synů.
+    3. Sloučení hald trvá $O(logn)$, včetně rekonstrukce minimového ukazatele.
 
