fix: issue #17 - 5.1 - wrong numbering in proof 5.2
Also added more explicit description of what is currently being proven

--- a/docs/05_Binomiální_haldy/5.1_Binomiální_stromy.md
+++ b/docs/05_Binomiální_haldy/5.1_Binomiální_stromy.md
@@ -92,10 +92,10 @@
     1. Indukcí podle $k$.
     2. Strom $B_{0}$ má jistě $1$ hladinu a $2^{0} = 1$ vrchol.
     3. Z indukčního předpokladu vyplývá, že počet hladin $B_{k−1}$ je $k$ a počet vrcholů je $2^{k−1}$. <br>
-    $\implies$ vlastnosti $1$ a $2$ dokázány.
+    $\implies$ vlastnosti $1$ a $3$ dokázány.
     4. Užitím dokázané části věty 5.2 dostáváme, že strom $B_{k}$ je složený ze dvou stromů $B_{k−1}$, z nichž jeden je o hladinu níže než druhý, což dává počet hladin $k + 1$ stromu $B_{k}$.
     5. Složením dvou stromů $B_{k−1}$ dostáváme $2 · 2^{k−1} = 2^{k}$ vrcholů.
-    6. Stupeň kořene $B_{k−1}$ je dle **IP** k − 1 a přidáním jednoho nového syna je stupeň $B_{k}$ tedy roven $k$
+    6. Stupeň kořene $B_{k−1}$ je dle **IP** k − 1 a přidáním jednoho nového syna je stupeň $B_{k}$ tedy roven $k$ $\implies$ vlastnost $2$ je dokázána
 
 !!! Implication "Důsledek"
 
