--- a/docs/01_Základy_grafů/1.3_Běžné_grafy.md
+++ b/docs/01_Základy_grafů/1.3_Běžné_grafy.md
@@ -96,8 +96,8 @@ Platí tedy $deg_{G}(v) = |N_{G}(v)|$
 
     $$
     \begin{align}
-    & \sum_{v \in V}{deg_{G}(v) = 2|E|} = \sum_{v \in V}{|N_{G}(v)| = 2|E|} = \sum_{v \in V}{|\{u \in V | \{u,v\} \in E \}|} \\ \\
-    & = \sum_{v \in V}{|\{e \in E | v \in e \}|} = \sum_{v \in V}{}\sum_{e \in E | v \in e}{1} = \sum_{e \in E}{2} = 2 |E|
+    & \sum_{v \in V}{deg_{G}(v)} = \sum_{v \in V}{|N_{G}(v)|} = \sum_{v \in V}{|\{u \in V | \{u,v\} \in E \}|} \\ \\
+    & = \sum_{v \in V}{|\{e \in E | v \in e \}|} = \sum_{v \in V}{}\sum_{e \in E | v \in e}{1} = \sum_{e \in E}{\sum_{v \in e}{1}} = \sum_{e \in E}{2} = 2 |E|
     \end{align}
     $$
 
