fix: real numbers latex change

--- a/docs/12_Ohodnocený_graf/12.2_Dijkstrův_algoritmus.md
+++ b/docs/12_Ohodnocený_graf/12.2_Dijkstrův_algoritmus.md
@@ -31,7 +31,7 @@ Místo simulace průchodu *BFS* vlny v lineárním čase vzhledem k délce hran,
 
 ---
 
-**Vstup:** Orientovaný graf $G = (V, E)$ s kladnými délkami hran $ℓ : E → R+$ a počáteční vrchol $v_0$.
+**Vstup:** Orientovaný graf $G = (V, E)$ s kladnými délkami hran $\ell : E \to \mathbb{R}^+$ a počáteční vrchol $v_0$.
 
 **Výstup:**Vzdálenosti z vrcholu $v_0$ do všech vrcholů grafu $G$.
 
