fix: union-find pseudocode

--- a/docs/11_Minimální_kostry_grafu/11.6_Union_Find_pokračování.md
+++ b/docs/11_Minimální_kostry_grafu/11.6_Union_Find_pokračování.md
@@ -60,6 +60,8 @@
     Je-li a = b, skonči
     Pokud H(a) = H(b):
         H(a) := H(a) + 1
+        p(b) := a
+        skonči
     Pokud H(a) < H(b):
         p(a) := b
     Pokud H(a) > H(b):
