fix: 9.3 - \le -> \lt

--- a/docs/09_Quicksort/9.3_Dolní_meze_vyhledávání.md
+++ b/docs/09_Quicksort/9.3_Dolní_meze_vyhledávání.md
@@ -10,7 +10,7 @@
     - Algoritmy pracují v porovnávacím modelu **RAM**, kde smějí vstupní prvky pouze vzájemně porovnávat a případně
       přesouvat.
     - Porovnání cmp($a_{i}$, $a_{j}$ ) je binární operace, která v konstantním
-      čase pro dva prvky $a_{i}$ a $a_{j}$ odpoví, zda platí $a_{i} \le a_{j}$ , $a_{i} = a_{j}$
+      čase pro dva prvky $a_{i}$ a $a_{j}$ odpoví, zda platí $a_{i} \lt a_{j}$ , $a_{i} = a_{j}$
       nebo $a_{i} \gt a_{j}$
     - Uvažujeme pouze deterministické algoritmy, které nepoužívají
       žádný zdroj náhody a jejichž každý krok je jednoznačně určen
