fix: issue #25 (wrong time complexity in 4.6)

--- a/docs/04_Binární_haldy/4.6_Amortizovaná_časová_složitost.md
+++ b/docs/04_Binární_haldy/4.6_Amortizovaná_časová_složitost.md
@@ -76,7 +76,7 @@ $^1$Naše definice zde je jen pro „zvětšující se“ datové struktury. Pre
         ```
 
     !!! Algorithm "Časová složitost"
-        Časová složitost volání **NPInsert** na pole s $i$ prvky je v nejhorším případě $\Theta^*(i)$.
+        Časová složitost volání **NPInsert** na pole s $i$ prvky je v nejhorším případě $\Theta(i)$.
 
 <a id="def-4.6"></a>
 !!! Theorem "Věta 4.6 (O amortizované analýze nafukovacího pole)"
